# web501-ecma

./: .env.example  .gitignore  Cargo.toml  ecma.db  note  note.md  req.http  rest.http
admin/: admin-dashboard.html  admin.js  db.json  package.json
frontends/: app.js  cart.html  checkout.html  dashboard.html  db.json  index.html  package-lock.json  package.json  style.css  test.js  thank-you.html
frontends/components/: CartItem.js  DetailsPage.js  MenuPage.js  OrderPage.js  ProductItem.js
frontends/css/: style.css
frontends/data/: menu.json
frontends/js/: cart-page.js  cart.js  checkout.js  main.js  products.js
frontends/js/services/: CartService.js  OrderService.js  ProductService.js
frontends/js/views/: CartView.js  CheckoutView.js  ProductView.js  ThankYouView.js
frontends/services/: API.js  Menu.js  Order.js  Router.js  Store.js
migrations/: 20241121095544_init.sql
src/: main.rs  routes.rs
src/controllers/: mod.rs  rest.rs  serve_static.rs  view.rs
src/database/: mod.rs
src/models/: categories.rs  dashboard.rs  mod.rs  orders.rs  products.rs
src/types/: category.rs  mod.rs  order.rs  param.rs  product.rs
