[package]
name = "BE-Assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
sqlx ={ version = "0.8.2", features = ["runtime-tokio", "sqlite"]} #SQLX for Database
dotenv = "0.15.0"
anyhow = "1.0.93"
