[package]
name = "BE-Assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx ={ version = "0.8.2", features = ["runtime-tokio", "sqlite"]} #SQLX for Database
dotenv = "0.15.0"
anyhow = "1.0.93"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
